--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>le dark</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Seal_icon.png/600px-Seal_icon.png">
+  <!-- Load Comic Neue as fallback for Comic Sans -->
+  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1 id="title">le dark</h1>
