--- a/index.html
+++ b/index.html
@@ -1,65 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>le dark</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Comic Neue fallback for Comic Sans look on mobile -->
-  <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap" rel="stylesheet">
-  <!-- favicon (seal) - replace with your own if desired -->
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b4/Seal_icon.png/600px-Seal_icon.png" type="image/png">
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/0b/Seal_icon.svg">
 </head>
 <body>
-  <header>
-    <h1 id="mainTitle">le dark</h1>
-  </header>
+  <h1>le dark</h1>
+  <button id="clickBtn">Add Dark</button>
+  <button id="counterBtn">Clicks left: 1000</button>
+  <div id="darkContainer"></div>
 
-  <main>
-    <div class="controls">
-      <button id="addDarkBtn" class="control-btn">Add Dark</button>
-      <button id="clicksLeftBtn" class="control-btn">Clicks Left: 1000</button>
-    </div>
+  <!-- Keypad -->
+  <div id="keypad"></div>
 
-    <section id="stage">
-      <div id="container" aria-live="polite"></div>
-    </section>
+  <!-- Secret Button -->
+  <button id="secretTopBtn" style="display:none;">☰</button>
 
-    <div id="adminArea">
-      <div id="adminMessage" class="hidden"></div>
-
-      <!-- keypad (hidden until long-press the secret area) -->
-      <div id="keypad" class="keypad hidden" aria-hidden="true">
-        <div id="passwordDisplay">----</div>
-        <div class="row">
-          <button class="key">1</button><button class="key">2</button><button class="key">3</button>
-        </div>
-        <div class="row">
-          <button class="key">4</button><button class="key">5</button><button class="key">6</button>
-        </div>
-        <div class="row">
-          <button class="key">7</button><button class="key">8</button><button class="key">9</button>
-        </div>
-        <div class="row">
-          <button class="wide key" id="clearKey">Clear</button>
-          <button class="key">0</button>
-          <button class="wide key" id="enterKey">Enter</button>
-        </div>
-      </div>
-
-      <!-- secret invisible button (long-press to show keypad) -->
-      <button id="secretCorner" aria-label="secret-area" class="secret-corner" title="secret"></button>
-
-      <!-- top-left secret button appears after secret feature unlocking -->
-      <button id="secretTopBtn" class="secret-top hidden" aria-hidden="true">✨ Secret Action</button>
-
-      <!-- admin menu (hidden until opened) -->
-      <div id="menuPanel" class="menu hidden" aria-hidden="true"></div>
-    </div>
-
-    <!-- canvas for light particles (GPU friendly) -->
-    <canvas id="particleCanvas" class="particles" aria-hidden="true"></canvas>
-  </main>
+  <!-- Admin Menu -->
+  <div id="menuPanel"></div>
 
   <script src="script.js"></script>
 </body>
