--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>le dark</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/0/0b/Seal_icon.svg">
+  <link rel="icon" type="image/png" href="seal.png"> <!-- favicon (seal image) -->
 </head>
 <body>
   <h1>le dark</h1>
-  <button id="clickBtn">Add Dark</button>
-  <button id="counterBtn">Clicks left: 1000</button>
+
+  <div class="controls">
+    <button id="clickBtn">Add Dark</button>
+    <button id="counterBtn">Clicks left: 1000</button>
+  </div>
+
   <div id="darkContainer"></div>
 
-  <!-- Keypad -->
   <div id="keypad"></div>
 
-  <!-- Secret Button -->
+  <!-- Secret button (☰), only appears after admin unlocked -->
   <button id="secretTopBtn" style="display:none;">☰</button>
 
-  <!-- Admin Menu -->
+  <!-- Admin menu -->
   <div id="menuPanel"></div>
 
   <script src="script.js"></script>
