--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
 
   <!-- Hidden admin trigger -->
   <div id="adminTrigger"></div>
-  <div id="keypad"></div>
+  <div id="keypad">
+    <div id="keypadDisplay"></div>
+  </div>
 
   <!-- Admin menu -->
   <div id="menuPanel"></div>
+
+  <!-- Bottom middle message -->
+  <div id="bottomMessage"></div>
 
   <script src="script.js"></script>
 </body>
