--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>le dark</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Seal_icon_cartoon.svg/1024px-Seal_icon_cartoon.svg.png">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>le dark</title>
+<link rel="stylesheet" href="style.css">
+<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Seal_icon_cartoon.svg/1024px-Seal_icon_cartoon.svg.png">
 </head>
 <body>
   <h1>le dark</h1>
@@ -14,7 +14,7 @@
   <button id="counterBtn">Clicks left: 1000</button>
   <div id="darkContainer"></div>
 
-  <!-- Settings -->
+  <!-- Settings button -->
   <button id="settingsBtn">⚙️</button>
   <div id="settingsPanel"></div>
 
