--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
   <button id="counterBtn">Clicks left: 1000</button>
   <div id="darkContainer"></div>
 
-  <!-- Settings button -->
   <button id="settingsBtn">⚙️</button>
   <div id="settingsPanel"></div>
 
-  <!-- Hidden admin trigger -->
   <div id="adminTrigger"></div>
+
+  <!-- Keypad -->
   <div id="keypad">
     <div id="keypadDisplay"></div>
+    <div id="keypadButtons"></div>
   </div>
 
-  <!-- Admin menu -->
+  <!-- Admin Menu -->
   <div id="menuPanel"></div>
 
-  <!-- Bottom middle message -->
+  <!-- Bottom message -->
   <div id="bottomMessage"></div>
 
   <script src="script.js"></script>
