--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
 <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Seal_icon_cartoon.svg/1024px-Seal_icon_cartoon.svg.png">
 </head>
 <body>
-  <h1>le dark</h1>
+  <h1 id="title">le dark</h1>
 
   <button id="clickBtn">Add Dark</button>
   <button id="counterBtn">Clicks left: 1000</button>
   <div id="darkContainer"></div>
 
+  <!-- Settings toggle -->
   <button id="settingsBtn">⚙️</button>
   <div id="settingsPanel"></div>
 
+  <!-- Admin trigger (bottom-right) -->
   <div id="adminTrigger"></div>
 
   <!-- Keypad -->
@@ -25,7 +27,7 @@
     <div id="keypadButtons"></div>
   </div>
 
-  <!-- Admin Menu -->
+  <!-- Admin menu -->
   <div id="menuPanel"></div>
 
   <!-- Bottom message -->
