--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
   <button id="settingsBtn">⚙️</button>
   <div id="settingsPanel"></div>
 
-  <div id="adminTrigger"></div>
-
   <!-- Keypad -->
   <div id="keypad">
     <div id="keypadDisplay"></div>
     <div id="keypadButtons"></div>
   </div>
 
-  <div id="menuPanel"></div>
+  <!-- Admin Panel -->
+  <div id="menuPanel">
+    <button id="closeAdmin">X</button>
+    <h2>Admin Panel</h2>
+    <button id="toggleCounter">Toggle Counter</button>
+  </div>
+
   <div id="bottomMessage"></div>
 
   <script src="script.js"></script>
