--- a/index.html
+++ b/index.html
@@ -14,20 +14,9 @@
   <button id="counterBtn">Clicks left: 1000</button>
   <div id="darkContainer"></div>
 
-  <button id="settingsBtn">⚙️</button>
-  <div id="settingsPanel"></div>
-
-  <!-- Keypad -->
-  <div id="keypad">
-    <div id="keypadDisplay"></div>
-    <div id="keypadButtons"></div>
-  </div>
-
   <!-- Admin Panel -->
-  <div id="menuPanel">
+  <div id="adminPanel">
     <button id="closeAdmin">X</button>
-    <h2>Admin Panel</h2>
-    <button id="toggleCounter">Toggle Counter</button>
   </div>
 
   <div id="bottomMessage"></div>
