--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <button id="counterBtn">Clicks left: 1000</button>
   <div id="darkContainer"></div>
 
+  <button id="settingsBtn">⚙️</button>
+  <div id="settingsPanel"></div>
+
   <!-- Admin Panel -->
   <div id="adminPanel">
     <button id="closeAdmin">X</button>
