--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
   <button id="settingsBtn">⚙️</button>
   <div id="settingsPanel"></div>
 
-  <!-- Admin Panel -->
-  <div id="adminPanel">
-    <button id="closeAdmin">X</button>
+  <div id="adminTrigger"></div>
+
+  <!-- Keypad -->
+  <div id="keypad">
+    <div id="keypadDisplay"></div>
+    <div id="keypadButtons"></div>
   </div>
+
+  <!-- Admin panel now full-screen and cleared -->
+  <div id="menuPanel"></div>
 
   <div id="bottomMessage"></div>
 
