--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="keypadButtons"></div>
   </div>
 
-  <!-- Admin panel now full-screen and cleared -->
+  <!-- Admin panel square -->
   <div id="menuPanel"></div>
 
   <div id="bottomMessage"></div>
