--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="keypadButtons"></div>
   </div>
 
-  <!-- Admin panel square -->
+  <!-- Fullscreen Admin Panel -->
   <div id="menuPanel"></div>
 
   <div id="bottomMessage"></div>
