--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>le dark</title>
-<link rel="stylesheet" href="style.css">
-<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Seal_icon_cartoon.svg/1024px-Seal_icon_cartoon.svg.png">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>le dark</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Seal_icon_cartoon.svg/1024px-Seal_icon_cartoon.svg.png">
 </head>
 <body>
   <h1 id="title">le dark</h1>
@@ -14,9 +14,11 @@
   <button id="counterBtn">Clicks left: 1000</button>
   <div id="darkContainer"></div>
 
+  <!-- Settings -->
   <button id="settingsBtn">⚙️</button>
   <div id="settingsPanel"></div>
 
+  <!-- Invisible admin trigger -->
   <div id="adminTrigger"></div>
 
   <!-- Keypad -->
@@ -25,9 +27,10 @@
     <div id="keypadButtons"></div>
   </div>
 
-  <!-- Centered Admin Panel -->
+  <!-- Fullscreen Admin Panel -->
   <div id="menuPanel"></div>
 
+  <!-- Bottom messages -->
   <div id="bottomMessage"></div>
 
   <script src="script.js"></script>
