--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 
   <!-- Settings -->
   <button id="settingsBtn">⚙️</button>
-  <div id="settingsPanel"></div>
+  <div id="settingsPanel">
+    <h2>Settings</h2>
+    <button id="toggleCounter">Toggle Counter</button>
+    <button id="toggleSound">Toggle Sound Effects</button>
+    <button id="toggleMusic">Toggle Music</button>
+  </div>
 
   <!-- Invisible admin trigger -->
   <div id="adminTrigger"></div>
@@ -29,7 +34,9 @@
 
   <!-- Fullscreen Admin Panel -->
   <div id="menuPanel">
-    <button id="closeAdmin">X</button>
+    <button id="closeMenu" class="closeBtn">❌</button>
+    <h2>Admin Panel</h2>
+    <p>Future crazy features go here…</p>
   </div>
 
   <!-- Bottom messages -->
