--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="profile">
       <img
         class="pfp"
-        src="https://cdn.discordapp.com/embed/avatars/0.png"
+        src="https://yt3.googleusercontent.com/0yl7umlw9KNe5Z0PjWAuNRvZsJVjnKCXMIIx7VHle-g5ehEd0xL5AbiEcAwn-p_844flVxhnWA=s160-c-k-c0x00ffffff-no-rj"
         alt="Discord PFP"
       />
       <div>
@@ -187,4 +187,5 @@
 
 </body>
 </html>
+
 
