--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Profile</title>
+  <title>about me</title>
 
   <style>
     * {
@@ -187,5 +187,6 @@
 
 </body>
 </html>
+
 
 
