--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
 
     <!-- TIERS SECTION -->
-    <div class="tiers-title">MCTiers</div>
+    <div class="tiers-title">MCTier Ranks</div>
 
     <div class="tier-list">
       <div class="tier">
@@ -187,6 +187,7 @@
 
 </body>
 </html>
+
 
 
 
