--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <span class="rank">UNRANKED</span>
       </div>
       <div class="tier">
-        <span class="mode">NetHOP</span>
+        <span class="mode">NethOP</span>
         <span class="rank">UNRANKED</span>
       </div>
       <div class="tier">
@@ -187,6 +187,7 @@
 
 </body>
 </html>
+
 
 
 
